# winds-restore

./: .gitignore  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.opencode/skills/code-simplifier/: SKILL.md
.opencode/skills/planning-with-files/: SKILL.md
.opencode/skills/pptx/: SKILL.md
.opencode/skills/ralph-loop/: SKILL.md
.opencode/skills/requesting-code-review/: SKILL.md
.opencode/skills/skill-creator/: SKILL.md
.opencode/skills/ui-ux-pro-max/: SKILL.md
.opencode/skills/using-superpowers/: SKILL.md
.opencode/skills/webapp-testing/: SKILL.md
assets/: runtime_manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/models/: manifest.rs  mod.rs  scan_result.rs
src-tauri/src/scanner/: directx.rs  filesystem.rs  installer.rs  mod.rs  registry.rs
src/api/: events.ts  tauri.ts
src/components/: EulaDialog.tsx  InstallPanel.tsx  RuntimeCard.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/data/: dllDatabase.ts  errorCodeDatabase.ts
src/pages/: HomePage.tsx  ResultsPage.tsx  ScanningPage.tsx  SettingsPage.tsx  ToolsPage.tsx
src/store/: appStore.ts
src/types/: index.ts
src/utils/: dllRuntimeMapping.ts
